# JumpAndRun-rs

./: Cargo.toml  Readme.md  TODO.md  build.rs
assets/: project.ogmo
assets/levels/: level1.json
src/: buffer.rs  camera.rs  framework.rs  main.rs  shader.frag  shader.vert  texture.rs
