[package]
name = "jump_and_run"
version = "0.1.0"
authors = ["sidit77 <sidit77@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24"
env_logger = "0.8"
log = "0.4"
wgpu = "0.7"
futures = "0.3"
bytemuck = "1.5"
anyhow = "1.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
shaderc = "0.7"